Terminación de codigo html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eCommerce practica👾</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="overlay"></div>
+    <div class="leftside">
+        <span class="logo">Fashion</span>
+        <div class="sm-product">
+            <h1 class="product-index"></h1>
+            <div class="sm-product-img-container">
+                <img src="./img/img1.jpg" class="sm-product-img" srcset="">
+            </div>
+            <p class="sm-product-des">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repellat dolor unde similique autem provident!
+
+            </p>
+        </div>
+        <div class="social-link">
+            <img src="./img/facebook.png" alt="" class="social-link-img">
+            <img src="./img/instagram.png" alt="" class="social-link-img">
+        </div>
+    </div>
+    <div class="right-side">
+        <img src="./img/img1.jpg" class="backdrop-img" alt="" srcset="">
+        <div class="content">
+            <div class="product-deatil">
+                <h1 class="product-name">Yellow Tracksuit</h1>
+                <p class="product-des">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est consequatur esse, itaque neque modi voluptatibus.
+                </p>
+                <a href="#" class="buy-btn">Buy now</a>
+                <button  class="nxt-btn">
+                    <img src="./img/arrow.png" alt="" srcset="">
+                </button>
+            </div>
+            <div class="product-img-container">
+                <img src="./img/img1.jpg" alt="" class="product-img">
+            </div>
+        </div>
+    </div>
     <script src="./js/app.js"></script>
 </body>
 </html>
