--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&family=Sirin+Stencil&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="overlay"></div>
-    <div class="leftside">
+    <div class="left-side">
         <span class="logo">Fashion</span>
         <div class="sm-product">
-            <h1 class="product-index"></h1>
+            <h1 class="product-index">01</h1>
             <div class="sm-product-img-container">
                 <img src="./img/img1.jpg" class="sm-product-img" srcset="">
             </div>
